--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ queue.name=projetofinal_email
 spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
 spring.mail.username=diegorjtestes@outlook.com
-spring.mail.password=Dr1593ji#
+spring.mail.password=senha
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
